--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "Logging": {
+    "Enabled": true,
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
