--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,8 @@
 {
   "Logging": {
+    "Enabled": {
+      "Value": false
+    },
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
@@ -7,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres"
+    "Default": "Host=pg-dev;Port=5432;Database=postgres;Username=postgres;Password=postgres;Pooling=true;Minimum Pool Size=5;Maximum Pool Size=50;"
   }
 }
